# WanchengsBatchMobileNumberOrganization

./: .gitignore  CMakeLists.txt  CSVPhoneLocationLoader.cpp  CSVPhoneLocationLoader.h  CustomProgressBar.qml  CustomReminderDialog.qml  InputExportInBatchNumberDialog.qml  InstanceTheme.h  LoadingDialog.qml  MacOS.icns  Main.qml  PhoneNumberImportrer.cpp  PhoneNumberImportrer.h  PhoneNumberListModel.cpp  PhoneNumberListModel.h  README.md  Structs.cpp  Structs.h  TextFileLoader.cpp  TextFileLoader.h  UnionButton.qml  main.cpp  material-theme.json  sources.qrc  theme.h
include/: ExportPhoneNumber.h  InstanceDialog.h  InstanceTheme.h  PhoneNumberImportrer.h  PhoneNumberListModel.h
src/: CSVPhoneLocationLoader.cpp  ExportPhoneNumber.cpp  InstanceDialog.cpp  InstanceTheme.cpp  PhoneNumberImportrer.cpp  PhoneNumberListModel.cpp  TextFileLoader.cpp
